--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -25,11 +25,13 @@
       </div>
       <div class="d-flex align-items-center justify-content-between">
         <span
-          ><i class="fa-solid fa-circle-plus text-main p-2 fa-xl cr"></i
+          ><i             (click)="addItemtocart(item.product._id, item.count + 1)" class="fa-solid fa-circle-plus text-main p-2 fa-xl cr"></i
         ></span>
         <span>{{ item.count }}</span>
         <span
           ><i
+                         (click)="addItemtocart(item.product.id, item.count - 1)"
+
             class="fa-solid fa-circle-minus rounded-5 text-main p-2 fa-xl cr"
           ></i
         ></span>
