--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -25,13 +25,15 @@
       </div>
       <div class="d-flex align-items-center justify-content-between">
         <span
-          ><i             (click)="addItemtocart(item.product._id, item.count + 1)" class="fa-solid fa-circle-plus text-main p-2 fa-xl cr"></i
+          ><i
+            (click)="addItemtocart(item.product._id, item.count + 1)"
+            class="fa-solid fa-circle-plus text-main p-2 fa-xl cr"
+          ></i
         ></span>
         <span>{{ item.count }}</span>
         <span
           ><i
-                         (click)="addItemtocart(item.product.id, item.count - 1)"
-
+            (click)="addItemtocart(item.product.id, item.count - 1)"
             class="fa-solid fa-circle-minus rounded-5 text-main p-2 fa-xl cr"
           ></i
         ></span>
