--- a/src/app/components/all-orders/all-orders.component.html
+++ b/src/app/components/all-orders/all-orders.component.html
@@ -1,3 +1,3 @@
-<p>Here we will display all user orders cst done site will soon updated</p>
+<p>Here we will display all user orders cst done site will soon updated api done</p>
 <section>
 </section>
