--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -15,7 +15,7 @@
 
     <!-- footer payment Details Design  -->
     <div class="pay-details d-flex justify-content-between align-items-center">
-      <div class="d-flex align-items-center gap-2">
+      <div class="d-flex align-items-center gap-2 g-sm-0">
         <h3 class="h6 m-0">Payment partners</h3>
         <img src="./assets/images/amazon-pay.png" width="30px" alt="" />
         <img
@@ -27,7 +27,7 @@
         <img src="./assets/images/mastercard.webp" width="30px" alt="" />
       </div>
 
-      <div class="d-flex align-items-center gap-2">
+      <div class="d-flex align-items-center gap-2 g-sm-0">
         <h3 class="h6 m-0">Get Deliveries with FreshCart</h3>
         <img src="./assets/images/get-google-play.png" width="75px" alt="" />
         <img src="./assets/images/get-apple-store.png" width="75px" alt="" />
