--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -14,24 +14,20 @@
     <hr />
 
     <!-- footer payment Details Design  -->
-    <div class="pay-details d-flex justify-content-between align-items-center">
-      <div class="d-flex align-items-center gap-2 g-sm-0">
-        <h3 class="h6 m-0">Payment partners</h3>
-        <img src="./assets/images/amazon-pay.png" width="30px" alt="" />
-        <img
-          src="./assets/images/American-Express-Color.png"
-          width="30px"
-          alt=""
-        />
-        <img src="./assets/images/paypal.png" width="30px" alt="" />
-        <img src="./assets/images/mastercard.webp" width="30px" alt="" />
+    <div class="pay-details d-flex flex-column flex-md-row justify-content-between align-items-center">
+      <div class="d-flex align-items-center gap-2 mb-3 mb-md-0">
+          <h3 class="h6 m-0">Payment partners</h3>
+          <img src="./assets/images/amazon-pay.png" width="30" alt="Amazon Pay" />
+          <img src="./assets/images/American-Express-Color.png" width="30" alt="American Express" />
+          <img src="./assets/images/paypal.png" width="30" alt="PayPal" />
+          <img src="./assets/images/mastercard.webp" width="30" alt="MasterCard" />
       </div>
-
-      <div class="d-flex align-items-center gap-2 g-sm-0">
-        <h3 class="h6 m-0">Get Deliveries with FreshCart</h3>
-        <img src="./assets/images/get-google-play.png" width="75px" alt="" />
-        <img src="./assets/images/get-apple-store.png" width="75px" alt="" />
+  
+      <div class="d-flex align-items-center gap-2">
+          <h3 class="h6 m-0">Get Deliveries with FreshCart</h3>
+          <img src="./assets/images/get-google-play.png" width="75" alt="Get it on Google Play" />
+          <img src="./assets/images/get-apple-store.png" width="75" alt="Download on the App Store" />
       </div>
-    </div>
+  </div>
   </div>
 </footer>
