--- a/src/app/components/nav-auth/nav-auth.component.html
+++ b/src/app/components/nav-auth/nav-auth.component.html
@@ -16,24 +16,26 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link"><i class="fa-brands fa-instagram"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link"><i class="fa-brands fa-facebook"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link"><i class="fa-brands fa-tiktok"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link"><i class="fa-brands fa-twitter"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link"><i class="fa-brands fa-linkedin"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link"><i class="fa-brands fa-youtube"></i></a>
-        </li>
+        <div class="d-flex flex-column flex-sm-row justify-content-between text-center">
+          <li class="nav-item">
+            <a class="nav-link"><i class="fa-brands fa-instagram"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"><i class="fa-brands fa-facebook"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"><i class="fa-brands fa-tiktok"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"><i class="fa-brands fa-twitter"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"><i class="fa-brands fa-linkedin"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"><i class="fa-brands fa-youtube"></i></a>
+          </li>
+        </div>
         <li class="nav-item mx-1">
           <a class="nav-link" routerLink="login" routerLinkActive="active-link"
             >Login</a
