--- a/src/app/components/nav-blank/nav-blank.component.html
+++ b/src/app/components/nav-blank/nav-blank.component.html
@@ -46,28 +46,30 @@
       </ul>
 
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active-link" routerLink="cart">
-            <i class="fa-solid fa-cart-shopping"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link"><i class="fa-brands fa-instagram"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link"><i class="fa-brands fa-facebook"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link"><i class="fa-brands fa-tiktok"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link"><i class="fa-brands fa-twitter"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link"><i class="fa-brands fa-linkedin"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link"><i class="fa-brands fa-youtube"></i></a>
-        </li>
+        <div class="d-flex  flex-sm-row justify-content-between text-center">
+          <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active-link" routerLink="cart">
+              <i class="fa-solid fa-cart-shopping"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"><i class="fa-brands fa-instagram"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"><i class="fa-brands fa-facebook"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"><i class="fa-brands fa-tiktok"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"><i class="fa-brands fa-twitter"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"><i class="fa-brands fa-linkedin"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"><i class="fa-brands fa-youtube"></i></a>
+          </li>
+        </div>
         <li class="nav-item">
           <a (click)="_authservice.logout()" class="nav-link cr">Signout</a>
         </li>
