update nav not active user row not column

--- a/src/app/components/nav-auth/nav-auth.component.html
+++ b/src/app/components/nav-auth/nav-auth.component.html
@@ -16,7 +16,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <div class="d-flex flex-column flex-sm-row justify-content-between text-center">
+        <div class="d-flex flex-sm-row justify-content-between text-center">
           <li class="nav-item">
             <a class="nav-link"><i class="fa-brands fa-instagram"></i></a>
           </li>
