--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,9 @@
   --font-family: "Encode Sans Expanded", sans-serif;
   --rating-color: #ffc908;
 }
+.w-40{
+  width: 40px;
+}
 
 body {
   font-family: var(--font-family) !important;
